src/test/resources/public/input/typechecking/bonus/bonus_fail02.jova
class Cls{

    public char f, g, h;
    public string a;
    public int l;

    public char func(){

        f = !g; // error

        g = (a > f) ? g : a;
        a = g ? f : h;
        l = f + g;

        if (g){
            l = 2;
        }
        return a;
    }
}